--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button id="button5">Shadow</button>
     <button id="button4">Reset</button>
 
-    <script type="text/javascript" src="/assets/javascript.js"></script>
+    <script type="text/javascript" src="/assets/java2.js"></script>
 
 </body>
 </html>
